feat(COR-27): add employee booking cancellation UX
